fix week spacing

--- a/frontend/src/components/scss/schedule.scss
+++ b/frontend/src/components/scss/schedule.scss
@@ -28,6 +28,9 @@
 
 .calendar-week {
   height: (1/3) * 100%;
+  &:not(:last-child) {
+    margin-bottom: 0.25rem;
+  }
 }
 
 .calendar-day {
